# paper-recommender

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: agent_tests.yaml
src/: main.py
src/agent/: deep_dive_agent.py  plan.py  research_agent.py
src/llm/: llm.py
src/tools/: fetch_paper_tool.py  tools.py
src/tools/deep_dive_tools/: fetch_paper_tool.py  read_paper_tool.py
src/tools/rank_tools/: rank_tool.py  relevance_tool.py
src/tools/search_tools/: arxiv_search.py  combined_search.py  hugging_face_search.py  search_tool.py  semantic_scholar_search.py
src/utils/: helpers.py  logger.py  prompt_template.py  tool_schema.py
tests/: test_rank_tool.py  test_relevance_tool.py  test_research_agent.py
vllm-server/: README.md
