[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-recommender-agent"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.3",
    "httpx>=0.28",
    "langchain>=1.2",
    "langchain-core>=1.2",
    "langchain-openai>=1.1",
    "langgraph>=1.0",
    "langgraph-checkpoint>=3.0",
    "langgraph-prebuilt>=1.0",
    "langgraph-sdk>=0.3",
    "openai>=2.12",
    "feedparser>=6.0",
    "pdfplumber>=0.11",
    "python-dotenv>=1.2",
    "semanticscholar>=0.11",
    "tiktoken>=0.12",
    "pydantic>=2.12",
    "tenacity>=9.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
